tests/ui/delegation/empty-list.stderr
error: empty list delegation is not supported
  --> $DIR/empty-list.rs:5:1
   |
LL | reuse m::{};
   | ^^^^^^^^^^^^

error: aborting due to 1 previous error

